[gd_scene load_steps=9 format=2]

[ext_resource path="res://res/txrs/gui/LoadingSS.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menu/LevelButtonUI.gd" type="Script" id=2]
[ext_resource path="res://res/fonts/aileron_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://res/fonts/aileron.tres" type="DynamicFont" id=4]
[ext_resource path="res://res/ui_theme.tres" type="Theme" id=5]
[ext_resource path="res://res/sfx/ui/press.mp3" type="AudioStream" id=6]
[ext_resource path="res://res/sfx/ui/hover.mp3" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_bottom_left = 7

[node name="Level" type="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -327.0
margin_bottom = -176.0
rect_min_size = Vector2( 185, 124 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shine" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Shine"]

[node name="TextArea" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 1.52588e-05
mouse_filter = 2
color = Color( 0, 0, 0, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -44.0
margin_bottom = -13.0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.435294 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "The Castle"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -27.0
margin_right = 130.0
margin_bottom = 1.0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.721569 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "By ChallengeYou"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Archived" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.6028
margin_right = 0.397217
margin_bottom = 24.0
theme = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Archived"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plays" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 55.0839
margin_top = -123.996
margin_right = 185.084
margin_bottom = -95.9956
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.721569 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Plays: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[connection signal="button_down" from="." to="." method="_on_Level_button_down"]
[connection signal="button_up" from="." to="." method="_on_Level_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Level_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Level_mouse_exited"]
